--- a/app/views/clients/newTicket.html
+++ b/app/views/clients/newTicket.html
@@ -101,7 +101,7 @@
 		</table>
 
 		<div class="offset3">
-			<a href="#/viewclient/{{clientId}}"><button type="reset" class="btn">Cancel</button></a>
+			<a href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="reset123()">Cancel</button></a>
 			<button type="submit" class="btn btn-primary">Save</button>
 		</div>
 	</fieldset>
