--- a/app/views/inventory/createitemdetails.html
+++ b/app/views/inventory/createitemdetails.html
@@ -125,7 +125,7 @@
 			</table>
 			
           <div class="offset3">
-            <a href="#/inventory"><button type="reset" class="btn">{{'button.cancel' | translate}}</button></a>
+            <a href="#/inventory"><button type="reset" class="btn" ng-click="reset123()">{{'button.cancel' | translate}}</button></a>
             <button type="submit" class="btn btn-primary">{{'label.save' | translate}}</button>
           </div>
           
