--- a/app/views/clients/addclientdocument.html
+++ b/app/views/clients/addclientdocument.html
@@ -65,7 +65,7 @@
 		</div>
 
 		<div class="offset3">
-			<a href="#/viewclient/{{clientId}}"><button type="reset" class="btn">{{'button.cancel' | translate}}</button></a>
+			<a href="#/viewclient/{{clientId}}"><button type="reset" class="btn" ng-click="reset123()">{{'button.cancel' | translate}}</button></a>
 			<button type="submit" ng-disabled="!clientdocument.$valid" class="btn btn-primary">{{'button.save' | translate}}</button>
 		</div>
 	</fieldset>
