event order error locales added

--- a/app/views/eventorder/eventorder.html
+++ b/app/views/eventorder/eventorder.html
@@ -27,7 +27,7 @@
 		<ul class="breadcrumb">
 			<li><a href="#/clients">{{'link.clients' | translate}}</a> <span class="divider">/</span></li>
 			<li><a href='#/viewclient/{{clientId}}'>{{'link.view.client' | translate}}</a> <span class="divider">/</span></li>
-			<li class="active">{{'label.adjustments' | translate}}</li>
+			<li class="active">{{'label.eventorder' | translate}}</li>
 		</ul>
 	</div>
 	<form class="form-horizontal well" ng-submit="submit()">
