--- a/app/views/clients/renewalorder.html
+++ b/app/views/clients/renewalorder.html
@@ -18,7 +18,27 @@
             <div class="controls">
               <select ng-model="formData.renewalPeriod"  ng-options="subscriptiondata.id as subscriptiondata.Contractdata for subscriptiondata in subscriptiondatas" value="{{disconnectDetail.mCodeValue}}"></select>
             </div>
-          </div><br>
+          </div>
+          <div ng-show="formData.ispaymentEnable==true">
+        <div class="control-group">
+           <label class="control-label" for="paymentCode">{{ 'label.paymentType' | translate }}</label>
+              <div class="controls">
+             	<select ng-model="formData.paymentCode" ng-options="paymode.id as paymode.mCodeValue for paymode in paymodes" value="{{paymode.id}}"></select>
+            </div>
+         </div>	
+         <div class="control-group">
+           	<label class="control-label" for="amountPaid">{{ 'label.amount' | translate }}</label>
+            	<div class="controls">
+             	<input type="text" id="amountPaid" ng-model="formData.amountPaid">
+           		</div>
+         	</div>
+         <div class="control-group">
+           <label class="control-label" for="receiptNo">{{ 'label.receiptno' | translate }}</label>
+           <div class="controls">
+             <input type="text" id="receiptNo" ng-model="formData.receiptNo">
+           	</div>
+         	</div>
+         	</div>
            <div class="control-group">
             <label class="control-label" for="status">{{ 'label.order.description' | translate }}</label>
             <div class="controls">
