--- a/app/views/clients/viewfinancialtransaction.html
+++ b/app/views/clients/viewfinancialtransaction.html
@@ -73,5 +73,24 @@
             </tr>
         </tbody>
     </table> 
+    <h3>Discount Details </h3>
+    <table class="table">
+        <thead>
+            <tr class="graybg">
+                      <th>{{'table.heading.chargeid' | translate}}</th>
+                       <th>{{'table.heading.chargedescription' | translate}}</th>
+                      <th>{{'table.heading.discountamount' | translate}}</th>
+                       <th>{{'table.heading.netchargeamount' | translate}}</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr ng-repeat="invoicedetail in invoicedetails">
+                <td>{{invoicedetail.chargeId}}</td>
+                <td>{{invoicedetail.chargeDescription}}</td>  
+                 <td>{{invoicedetail.discountAmount}}</td>
+                 <td>{{invoicedetail.netChargeAmount}}</td>          
+            </tr>
+        </tbody>
+    </table>
 </div>
 </div>
