--- a/app/views/prospects/createprospects.html
+++ b/app/views/prospects/createprospects.html
@@ -236,7 +236,7 @@
                         			<label class="control-label">{{ 'label.nextcalltime' | translate }}</label>
                         			<div class="controls">
                             		<!-- <input type="text" ng-model="first.date" name="preferredCallingTime"/> -->
-                            		<input type="text" id="preferredCallingTime" readonly datepicker-pop="dd MMMM yyyy" ng-model="first.date" is-open="opened" date-disabled="disabled(date, mode)" required late-Validate style="width:130px;background-color:#FFFFFF;" />
+                            		<input type="text" id="preferredCallingTime" min="minDate" datepicker-pop="dd MMMM yyyy" ng-model="first.date" required late-Validate style="width:130px;background-color:#FFFFFF;" />
                             		 <div class="input-append bootstrap-timepicker">
 										<input id="timepicker1" type="text" readonly ng-model="first.time" style="width:60px;background-color:#FFFFFF;">
 										<span class="add-on"><i class="icon-time"></i></span>
