--- a/app/views/prospects/followprospects.html
+++ b/app/views/prospects/followprospects.html
@@ -27,7 +27,7 @@
            <label class="control-label">{{ 'label.nextcall' | translate }}</label>
             <div class="controls">
             <!-- <input type="text" readonly datepicker-pop="dd MMMM yyyy" ng-model="" is-open="opened2" min="minDate" max="'2020-06-22'" date-disabled="disabled(date, mode)" style="width:130px;background-color:#FFFFFF;" /> -->
-            <input type="text"  readonly datepicker-pop="dd MMMM yyyy" ng-model="first.date" is-open="opened2" date-disabled="disabled(date, mode)" required late-Validate style="width:130px;background-color:#FFFFFF;" /> 
+            <input type="text"  readonly datepicker-pop="dd MMMM yyyy" ng-model="first.date" min="minDate" is-open="opened2" date-disabled="disabled(date, mode)" required late-Validate style="width:130px;background-color:#FFFFFF;" /> 
             <div class="input-append bootstrap-timepicker">
 				<input id="timepicker1"  readonly type="text" ng-model="first.time" style="width:60px;background-color:#FFFFFF;" >
 				<span class="add-on"><i class="icon-time"></i></span>
