--- a/app/views/prospects/viewprospects.html
+++ b/app/views/prospects/viewprospects.html
@@ -7,10 +7,10 @@
 	    </ul>
 	    <div class="pull-right">
 	      <div class="btn-group">
-	          <a href="#/followprospects/{{prospects.id}}" ng-show="prospects.status != 'Closed'" class="btn btn-primary"><i class="icon-edit icon-white"></i> FollowUp</a>
-	          <a ng-click="convertProspect()" ng-show="prospects.status != 'Closed'" class="btn btn-primary"><i class="icon-edit icon-white"></i> Convert</a>
-	          <a href="#/editprospects/{{prospects.id}}" ng-show="prospects.status != 'Closed'" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a>
-	          <a href="#/cancelprospects/{{prospects.id}}" ng-show="prospects.status != 'Closed'" class="btn btn-primary"><i class="icon-trash icon-white"></i> Cancel</a>	        
+	          <a href="#/followprospects/{{prospects.id}}" ng-show="getVal(prospects.status)" class="btn btn-primary"><i class="icon-edit icon-white"></i> FollowUp</a>
+	          <a ng-click="convertProspect()" ng-show="getVal(prospects.status)" class="btn btn-primary"><i class="icon-edit icon-white"></i> Convert</a>
+	          <a href="#/editprospects/{{prospects.id}}" ng-show="getVal(prospects.status)" class="btn btn-primary"><i class="icon-edit icon-white"></i> Edit</a>
+	          <a href="#/cancelprospects/{{prospects.id}}" ng-show="getVal(prospects.status)" class="btn btn-primary"><i class="icon-trash icon-white"></i> Cancel</a>	        
 	          
 	          
 	      </div>
