--- a/app/views/clients/viewclient.html
+++ b/app/views/clients/viewclient.html
@@ -539,7 +539,7 @@
 				<tr ng-repeat="transactionhistory in transactionhistory.currentPageItems  | filter:filterText">
 					<td>{{transactionhistory.id}}</td>
 					<td>{{transactionhistory.transactionType}}</td>  
-					<td>{{transactionhistory.transactionDate}}</td>
+					<td>{{transactionhistory.transactionDate | DateFormat}}</td>
 					<td>{{transactionhistory.user}}</td>
 				
 					<td>{{transactionhistory.history}}</td> 
