--- a/app/views/reports/run_reports.html
+++ b/app/views/reports/run_reports.html
@@ -1,15 +1,27 @@
-<div class="row alert-block form-horizontal span" ng-controller="RunReportsController">
-    <div class="row alert-block span" >
-        <h3><b>{{reportName}}</b>&nbsp;<a class="btn" ng-show="checkStatus()" ng-click="isCollapsed=!isCollapsed"><i class="icon-sort-down icon-white"></i></a></h3>
-    </div>
+<div class="paddedbottom10">
+    <ul class="breadcrumb">
+        <li><a href="#/reports">{{'label.anchor.reports' | translate}}</a> <span class="divider">/</span></li>
+        <li class="active">{{'label.anchor.runreport' | translate}}</li>
+    </ul>
+</div>
+<div  ng-controller="RunReportsController">
+  <api-validate></api-validate>
+    <div class="span gray-head" style="margin-left:0%;height:20px;margin-top: -10px;" >
+      <span style="margin-left: 10px;font-size:20px;">
+                <strong>{{reportName}}</strong>
+                <button type="button" class="btn-primary pull-right" ng-show="checkStatus()" ng-click="isCollapsed=!isCollapsed"><i class="icon-chevron-down icon-white"></i>{{ 'label.button.parameters' | translate }}</button>
+                <button type="button" data-ng-hide="hideChart" class="btn-primary pull-right" ng-click="setTypePie()">{{ 'label.input.piechart' | translate }}</button>
+                <button type="button" data-ng-hide="hideChart" class="btn-primary pull-right" ng-click="setTypeBar()">{{ 'label.input.barchart' | translate }}</button>
+      </span>
+   </div>
 
     <div ng-hide="isCollapsed" class="row alert-block span">
         <br>
         <div class="control-group info"  ng-repeat="reportParam in reportParams">
             <label class="control-label" for="{{reportParam.variable}}">{{ reportParam.label }}</label>
             <div class="controls">
-              <select class="input-xlarge" ng-model="formData[reportParam.inputName]" ng-change="getDependencies(reportParam)" required>
-                <option ng-show="reportParam.selectAll == 'Y'" value="-1">All</option>
+              <select id="{{reportParam.inputName}}" class="input-xlarge" ng-model="formData[reportParam.inputName]" ng-change="getDependencies(reportParam)" required>
+                <option ng-show="reportParam.selectAll == 'Y'" value="-1">{{ 'label.all' | translate }}</option>
                 <option ng-repeat="selectOption in reportParam.selectOptions" value="{{selectOption.id}}">{{selectOption.name}}</option>
               </select>
             </div>
@@ -17,42 +29,104 @@
         <div class="control-group info"  ng-repeat="reportDateParam in reportDateParams">
             <label class="control-label" for="{{reportDateParam.variable}}">{{ reportDateParam.label }}</label>
             <div class="controls">
-                <input type="text" datepicker-pop="yyyy-MM-dd" ng-model="formData[reportDateParam.inputName]" is-open="'opened'+$index" min="minDate" max="'2020-06-22'" date-disabled="disabled(date, mode)" required late-Validate />
+                <input id="{{reportDateParam.inputName}}" type="text" datepicker-pop="yyyy-MM-dd" ng-model="formData[reportDateParam.inputName]" is-open="'opened'+$index" min="minDate" max="'2020-06-22'" date-disabled="disabled(date, mode)" required late-Validate />
             </div>
         </div>
-        <div class="control-group info"  >
+         <div class="control-group info" ng-show="reportType == 'Table'" >
             <label class="control-label" for="outputType">{{ 'label.report.output.type' | translate }}</label>
             <div class="controls">
               <select class="input-xlarge" ng-model="formData.outputType">
-                <option value="HTML">Show Report</option>
-                <option value="XLS">Export Excel Format</option>
-                <option value="CSV">Export CSV Format</option>
-                <option value="PDF">PDF Format</option>
+                <option value="HTML">{{ 'label.input.showreport' | translate }}</option>
+                <option value="CSV">{{ 'label.input.exportcsv' | translate }}</option>
+                <option value="PDF">{{ 'label.input.pdfformat' | translate }}</option>
+                <option value="billingChart">{{ 'label.input.chartformat' | translate }}</option>
               </select>
             </div>
         </div>
-        <span><a ng-click="runReport()" class="btn btn-primary control"><i class="icon-play icon-white"></i>&nbsp;&nbsp;Run</a></span> 
+        <div class="control-group info" ng-show="reportType == 'Pentaho'" >
+            <label class="control-label" for="outputType">{{ 'label.report.output.type' | translate }}</label>
+            <div class="controls">
+              <select class="input-xlarge" ng-model="formData.outputType">
+                <option value="HTML">{{ 'label.input.showreport' | translate }}</option>
+                <option value="XLS">{{ 'label.input.exportexcel' | translate }}</option>
+                <option value="CSV">{{ 'label.input.exportcsv' | translate }}</option>
+                <option value="PDF">{{ 'label.input.pdfformat' | translate }}</option>
+              </select>
+            </div>
+        </div>
+        <span><a ng-click="runReport()" class="btn btn-primary control"><i class="icon-play icon-white"></i>&nbsp;&nbsp;{{ 'label.button.runreport' | translate }}</a></span> 
     </div>
-
-    <div collapse="hideTable" class="row alert-block span tab-content">
-        <br>
-        <table class="table table-striped">
+     <div style="visibility: hidden">
+        <table>
+            <tr>
+                <td width="30%"></td>
+                <td>
+                    <input type="radio" ng-model="type" value="pie">{{'label.input.pie' |
+                    translate}}<br/>
+                <td>
+                <td>
+                    <input type="radio" ng-model="type" value="bar">{{'label.input.bar' |
+                    translate}}<br/>
+                </td>
+            </tr>
+        </table>
+    </div>
+     <div style="margin-left:-45px;overflow:auto">
+        <div data-ng-hide="hideChart">
+            <div data-ng-show="type=='pie'">
+                <nvd3-pie-chart
+                        data="chartData"
+                        id="pie"
+                        width="900"
+                        height="700"
+                        x="xFunction()"
+                        y="yFunction()"
+                        tooltips="true"
+                        showLegend="true"
+                        showLabels="true"
+                        labelType="percent">
+                    <svg height="1300"></svg>
+                </nvd3-pie-chart>
+            </div>
+            <div style="margin-left: 100px" data-ng-show="type=='bar'">
+                <nvd3-multi-bar-chart
+                        data="barData"
+                        id="barchart"
+                        width="700"
+                        height="400"
+                        showValues="true"
+                        tooltips="true"
+                        rotateLabels="90">
+                    <svg></svg>
+                </nvd3-multi-bar-chart>
+            </div>
+        </div>
+    </div>
+    
+    <div data-ng-hide="hideTable">
+      
+        <div scroll>
+         <table style="width: 1200px;white-space:nowrap"  class="table table-bordered" data-anchor>
             <thead>
                 <tr class="graybg">
-                    <th ng-repeat="columnHeader in reportData.columnHeaders" >{{columnHeader.columnName}}</th>
+                    <th ng-repeat="columnHeader in reportData.columnHeaders" >{{columnHeader.columnName}}</div></th>
                 </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="row in reportData.data" >
+                <tr id="{{$index}}" data-ng-click="highlight($index)" ng-repeat="row in reportData.data" >
                     <td ng-repeat="col in row.row" >{{col}}</td>
                 </tr>
             </tbody>
         </table>
     </div>
-
-    <div collapse="hidePentahoReport" class="row alert-block span tab-content">
+   </div>
+    <div data-ng-hide="hideChartReport" class="row alert-block span tab-content">
+    <br>
+        <div id="StretchyReportOutput"></div>
+   </div>
+    <div data-ng-hide="hidePentahoReport" class="row alert-block span tab-content">
         <br>
-        <iframe id=rptLoadingFrame src="{{baseURL}}" frameborder="0" width="100%" height="600px"></iframe>';
+        <iframe id=rptLoadingFrame src="{{baseURL}}" frameborder="0" width="100%" height="600px"></iframe>
     </div>
 
 </div>
