changes made in onetimesale create screen because of date issue

--- a/app/views/clients/addonetimesale.html
+++ b/app/views/clients/addonetimesale.html
@@ -48,7 +48,7 @@
 								<div class="control-group">
                         		<label class="control-label">{{ 'label.saleDate' | translate }}</label>
                         		<div class="controls">
-                            	<input type="text" datepicker-pop="dd MMMM yyyy" ng-model="date.saleDate" is-open="opened2" min="minDate" max="'2020-06-22'" 
+                            	<input type="text" datepicker-pop="dd MMMM yyyy" ng-model="date.saleDate" is-open="opened2" max="maxDate" 
                             	date-disabled="disabled(date, mode)"  style="background-color:#FFFFFF;"  readonly/>
                         		</div>
           						</div>
