viewschedulejobhtml and controller changed

--- a/app/views/clients/createclient.html
+++ b/app/views/clients/createclient.html
@@ -135,7 +135,7 @@
              <div class="control-group" ng-hide="configurationProperty==false">
               <label class="control-label">Password<span class="required">*</span></label>
               <div class="controls">
-                <input type="text"  ng-model="formData.password"/>
+                <input type="password"  ng-model="formData.password"/>
               </div>
             </div>
            </td>
