--- a/app/views/clients/viewstatement.html
+++ b/app/views/clients/viewstatement.html
@@ -14,15 +14,15 @@
         </li>
         <li><span class="divider">|</span>
           <i class="icon-barcode"></i>
-          <small>Uniquely identified with {{accountNo}}&nbsp;</small>
+          <small>Uniquely identified {{accountNo}}&nbsp;</small>
         </li>
         <li><span class="divider">|</span>
           <i class="icon-building"></i>
-          <small>Belongs to "{{officeName}}" office</small>
+          <small>Office "{{officeName}}" </small>
         </li>
          <li><span class="divider">|</span>
           <i></i>
-          <small>Balance:{{balanceAmount}} &nbsp;{{currency}}</small>
+          <small>Balance {{balanceAmount}} &nbsp;{{currency}}</small>
         </li>
  </ul>
 		<ul class="breadcrumb">
